--- a/app/globals.css
+++ b/app/globals.css
@@ -98,7 +98,7 @@ body {
 
 .image-wrapper {
   width: 40%;
-  
+  height: 80vh;
   
 }
 
@@ -137,5 +137,6 @@ body {
   }
   .image-wrapper {
     width: 100%;
+    height: 20rem;
   }
 }
