--- a/components/side-bar/side-bar.module.css
+++ b/components/side-bar/side-bar.module.css
@@ -1,5 +1,5 @@
 .side_bar {
-    background: #fff;
+    
     width: 100%;
     height: 100%;
     position: absolute;
@@ -7,6 +7,7 @@
     left: 0;
     transform: translateX(-100%);
     transition: transform 2s;
+    transition-delay: 0.5s;
 }
 
 .side_bar.is_open {
