--- a/app/globals.css
+++ b/app/globals.css
@@ -140,3 +140,75 @@ body {
     height: 20rem;
   }
 }
+
+
+.type-reveal {
+  padding: 2rem clamp(1rem, 5vw, 4rem);
+  color: #fff;
+  width: 100%;
+  text-align: center;
+}
+
+.type-reveal span {
+  
+  position: relative;
+  font-size: clamp(1rem, 1vw, 9rem);
+  color: transparent;
+  background: #4207f2;
+  transition: 0.25s;
+  letter-spacing: 0.1rem;
+  line-height: 1.5rem;
+  
+}
+
+@media only screen and (max-width: 600px) {
+  .type-reveal span {
+  font-size: 0.8rem;
+  letter-spacing: 0;
+  line-height: 1rem;
+}
+.active.active-title {
+  font-size: 20px !important;
+}
+}
+
+.type-reveal span:after {
+  content: '';
+  position: absolute;
+  inset: 1px;
+  background: #333;
+  
+}
+
+.type-reveal span.active {
+  color: #fff;
+  background: transparent;
+}
+.active.active-title {
+  color: blue !important;
+  font-size: 2rem;
+  text-shadow: #FC0 1px 0 10px;
+  font-style: italic;
+}
+.type-reveal span.active:after {
+  opacity: 0;
+}
+
+.content {
+  background: #000;
+  width: 100%;
+  height: 70rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 10%;
+}
+
+.dark .content {
+  background: #fff; 
+}
+
+.test_div {
+  height: 180vh;
+  background: orange;
+}
