--- a/components/ticker-slider/ticker.module.css
+++ b/components/ticker-slider/ticker.module.css
@@ -50,8 +50,8 @@
     animation-timing-function: linear;
     -webkit-animation-name: ticker;
     animation-name: ticker;
-    -webkit-animation-duration: 25s;
-    animation-duration: 25s;
+    -webkit-animation-duration: 35s;
+    animation-duration: 35s;
 
 
 }
@@ -69,4 +69,9 @@
     width: auto;
     display: inline-block;
     margin-right: 20px;
+}
+
+.date {
+    font-size: 1.6rem;
+    color : pink;
 }
