--- a/components/intro-page/intro-page.module.css
+++ b/components/intro-page/intro-page.module.css
@@ -45,6 +45,15 @@
     
 }
 
+@media only screen and (max-width: 400px) {
+    .logo-container>h1 {
+        font-size: 1rem;
+    }
+    .logo-container>h1>span {
+        font-size: 1.5rem;
+    }
+}
+
 .border {
     
     position: absolute;
